syntax = "proto3";
option java_package = "models.proto.record";
option java_generate_equals_and_hash = true;
import "RecordResult.proto";

message RecordList {
  repeated RecordResult records = 1;
}

